added card section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header section -->
    <header>
     <div class="navbar">
         <div class="nav-logo border">
@@ -27,6 +28,9 @@
                 <option>Deals</option>
             </select>
             <input placeholder="Search Amazon" class="search-input">
+            <div class="search-insta">
+                <i class="fa-brands fa-instagram"></i> 
+            </div>
             <div class="search-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
@@ -46,6 +50,61 @@
             <i class="fa-solid fa-cart-arrow-down"></i>            Cart
         </div>
     </div>
+    <div class="panel">
+        <div class="panel-all border">
+            <i class="fa-solid fa-bars"></i>
+            All
+        </div>
+        <div class="panel-options">
+            <p class="border">Todays' Deals</p>
+            <p class="border">Customer Service</p>
+            <p class="border">Registry</p>
+            <p class="border">Gift Cards</p> 
+            <p class="border">Sell</p>
+        </div>
+    </div>
    </header>
+   <!-- header section ends -->
+
+   <!-- main section starts -->
+   <div class="main-section">
+   </div>
+   <!-- main section ends -->
+
+   <!-- card section starts here -->
+   <div class="card-section">
+    <div class="box-one box">
+        <div class="box-content">
+            <h3>Clothing & Outfits</h3>
+            <div class="box-image" style="background-image: url('images/box1_image.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box-two box">
+            <div class="box-content">
+                <h3>Health & Personal Care</h3>
+                <div class="box-image" style="background-image: url('images/box2_image.jpg');"></div>
+                <p>shop Now</p>
+            </div>
+    </div>
+    <div class="box-three box">
+            <div class="box-content">
+                <h3>Home Appliances</h3>
+                <div class="box-image" style="background-image: url('images/box3_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+    </div>
+    <div class="box-four box">
+        <div class="box-content">
+            <h3>Smartphones</h3>
+            <div class="box-image" style="background-image: url('images/box4_image.jpg');"></div>
+            <p>Shop Now</p>
+        </div>
+</div>
+        
+   </div>
+
+   <!-- card section ends here -->
+
 </body>
 </html>
