--- a/index.html
+++ b/index.html
@@ -1,110 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- header section -->
-   <header>
-    <div class="navbar">
-        <div class="nav-logo border">
-            <div class="logo"></div>
-        </div>
+    <header>
+        <div class="navbar">
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
 
-        <div class="nav-address border">
-            <p class="addr-first">Deliver to</p>
-            <div class="addr-icon">
-                <i class="fa-solid fa-location-dot"></i>               
-                <p class="addr-second">Nepal</p>
+            <div class="nav-address border">
+                <p class="addr-first">Deliver to</p>
+                <div class="addr-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="addr-second">Nepal</p>
+                </div>
+            </div>
+
+            <div class="nav-search">
+                <select class="search-select">
+                    <option>Deals</option>
+                </select>
+                <input placeholder="Search Amazon" class="search-input">
+                <div class="search-insta">
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+
+            <div class="nav-signin border">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-second">Account & Lists</p>
+            </div>
+
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-second"> & Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-arrow-down"></i> Cart
             </div>
         </div>
-
-        <div class="nav-search">
-            <select class="search-select">
-                <option>Deals</option>
-            </select>
-            <input placeholder="Search Amazon" class="search-input">
-            <div class="search-insta">
-                <i class="fa-brands fa-instagram"></i> 
+        <div class="panel">
+            <div class="panel-all border">
+                <i class="fa-solid fa-bars"></i>
+                All
             </div>
-            <div class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
+            <div class="panel-options">
+                <p class="border">Todays' Deals</p>
+                <p class="border">Customer Service</p>
+                <p class="border">Registry</p>
+                <p class="border">Gift Cards</p>
+                <p class="border">Sell</p>
             </div>
         </div>
+    </header>
+    <!-- header section ends -->
 
-        <div class="nav-signin border">
-            <p><span>Hello, sign in</span></p>
-            <p class="nav-second">Account & Lists</p>
-        </div>
-
-        <div class="nav-return border">
-            <p><span>Returns</span></p>
-            <p class="nav-second"> & Orders</p>
-        </div>
-
-        <div class="nav-cart border">
-            <i class="fa-solid fa-cart-arrow-down"></i>            Cart
-        </div>
+    <!-- main section starts -->
+    <div class="main-section">
     </div>
-    <div class="panel">
-        <div class="panel-all border">
-            <i class="fa-solid fa-bars"></i>
-            All
-        </div>
-        <div class="panel-options">
-            <p class="border">Todays' Deals</p>
-            <p class="border">Customer Service</p>
-            <p class="border">Registry</p>
-            <p class="border">Gift Cards</p> 
-            <p class="border">Sell</p>
-        </div>
-    </div>
-   </header>
-   <!-- header section ends -->
+    <!-- main section ends -->
 
-   <!-- main section starts -->
-   <div class="main-section">
-   </div>
-   <!-- main section ends -->
-
-   <!-- card section starts here -->
-   <div class="card-section">
-    <div class="box-one box">
-        <div class="box-content">
-            <h3>Clothing & Outfits</h3>
-            <div class="box-image" style="background-image: url('images/box1_image.jpg');"></div>
-            <p>See more</p>
+    <!-- card section starts here -->
+    <div class="card-section">
+        <div class="box">
+            <div class="box-content">
+                <h3>Clothing & Outfits</h3>
+                <div class="box-image" style="background-image: url('images/box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
         </div>
-    </div>
-    <div class="box-two box">
+        <div class="box">
             <div class="box-content">
                 <h3>Health & Personal Care</h3>
                 <div class="box-image" style="background-image: url('images/box2_image.jpg');"></div>
                 <p>shop Now</p>
             </div>
-    </div>
-    <div class="box-three box">
+        </div>
+        <div class="box">
             <div class="box-content">
                 <h3>Home Appliances</h3>
                 <div class="box-image" style="background-image: url('images/box3_image.jpg');"></div>
                 <p>See more</p>
             </div>
-    </div>
-    <div class="box-four box">
-        <div class="box-content">
-            <h3>Smartphones</h3>
-            <div class="box-image" style="background-image: url('images/box4_image.jpg');"></div>
-            <p>Shop Now</p>
         </div>
-</div>
-        
-   </div>
+        <div class="box">
+            <div class="box-content">
+                <h3>Smartphones</h3>
+                <div class="box-image" style="background-image: url('images/box4_image.jpg');"></div>
+                <p>Shop Now</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h3>Clothing & Outfits</h3>
+                <div class="box-image" style="background-image: url('images/box5_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h3>Health & Personal Care</h3>
+                <div class="box-image" style="background-image: url('images/box6_image.jpg');"></div>
+                <p>shop Now</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h3>Home Appliances</h3>
+                <div class="box-image" style="background-image: url('images/box7_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h3>Smartphones</h3>
+                <div class="box-image" style="background-image: url('images/box8_image.jpg');"></div>
+                <p>Shop Now</p>
+            </div>
+        </div>
 
-   <!-- card section ends here -->
+    </div>
+
+    <!-- card section ends here -->
+
+    <!-- footer section starts here -->
+    <footer>
+        <div class="footer-panel">
+            <p>Back to top</p>
+        </div>
+        <div class="footer-list">
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">About Amazon</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Blogs</a>
+                <a href="#">Amazon devices</a>
+                <a href="#">Amazon Sciences</a>
+            </ul>
+            <ul>
+                <p>Make Money with Us</p>
+                <a href="#">Sell products on Amazon</a>
+                <a href="#">Sell on Amazon Business</a>
+                <a href="#">Sell apps on Amazon</a>
+                <a href="#">Become an affiliate</a>
+                <a href="#">Advertise Your Products</a>
+                <a href="#">Self-Publish with Us</a>
+                <a href="#">Host on Amazon Hub</a>
+                <a href="#">See More Make Money with Us</a>
+
+            </ul>
+            <ul>
+                <p>Amazon Payment Products</p>
+                <a href="#">Amazon Business card-section</a>
+                <a href="#">Shop with Points</a>
+                <a href="#">Relod Your Balance</a>
+                <a href="#">Amazon devices</a>
+                <a href="#">Amazon Currency Converter</a>
+            </ul>
+            <ul>
+                <p>Let Us help You</p>
+                <a href="#">Amazon and COVID-19</a>
+                <a href="#">Your Account</a>
+                <a href="#">Your Orders</a>
+                <a href="#">Shipping Rates & Policies</a>
+                <a href="#">Returns & Replacements</a>
+                <a href="#">Manage Your Content & Devices</a>
+                <a href="#">Amazon Assistant</a>
+                <a href="#">Help</a>
+            </ul>
+        </div>
+        <div class="footer-logo">
+            <div class="foot-logo"></div>
+            <div class="language">
+                <i class="fa-solid fa-globe"></i>
+            <select>
+                <option value="ne" lang="ne">Nepali</option>
+                <option value="np" lang="en">English</option>
+                <option value="es" lang="es">Spanish</option>
+                <option value="fr" lang="fr">French</option>
+            </select>
+            </div>
+            <div class="payment">
+                <p>रु  NRs-Nepali Rupee</p>
+            </div>
+            <div class="country">
+                <img src="images/nepal.jpeg" alt="">
+                <p>Nepal</p>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section ends here -->
 
 </body>
+
 </html>
