--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </select>
             </div>
             <div class="payment">
-                <p>रु  NRs-Nepali Rupee</p>
+                <p>रु NRs.-Nepali Rupee</p>
             </div>
             <div class="country">
                 <img src="images/nepal.jpeg" alt="">
